# coin_war

./: .env.example  .gitignore  LICENSE  README.md  install.sh  main.py  pyproject.toml  requirements.txt
backtest/: engine.py  report.py
config/: crypto_settings.yaml  settings.yaml
crypto/: arbitrage.py  config.py  executor.py  monitor.py  position_sizer.py  scanner.py
crypto/exchanges/: base.py  binance.py  bitopro.py  bybit.py  max_exchange.py  okx.py  simulated.py
data/: bulk_download.py  cache.py  fetcher.py  stock_list.py
docs/superpowers/plans/: 2026-03-22-taiwan-stock-signal.md
docs/superpowers/specs/: 2026-03-22-taiwan-stock-signal-design.md  2026-03-24-crypto-arbitrage-design.md  2026-03-25-coinwar-config-ui-design.md
orders/: base.py  broker.py  paper.py
signals/: chips.py  composite.py  technical.py  volume.py
strategy/: entry.py  exit.py
tests/: test_backtest.py  test_cache.py  test_chips.py  test_composite.py  test_fetcher.py  test_paper.py  test_strategy.py  test_technical.py  test_volume.py
tests/crypto/: test_arbitrage.py  test_base.py  test_binance.py  test_executor.py  test_monitor.py  test_other_exchanges.py  test_position_sizer.py  test_scanner.py
