[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coin-war"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
coinwar = "main:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", ".venv*", "docs*", "cache*", "reports*"]

[tool.setuptools]
py-modules = ["main"]
